Blog: bug fixes, features added
bug fixes:
	fixed bug at view cache that allow not logged users to se pages as logged user.
now index/post_view and other pages are not more cached.
	bug fixed at config.
	appstats event handler installed
features:
	draft feature implemented
	added admin app to application (/admin)

--- a/app.yaml
+++ b/app.yaml
@@ -7,8 +7,19 @@ handlers:
 - url: /stats.*
   script: $PYTHON_LIB/google/appengine/ext/appstats/ui.py
 
+- url: /admin/.*
+  script: $PYTHON_LIB/google/appengine/ext/admin
+  login: admin
+
 - url: .*
   script: main.py
+
+admin_console:
+  pages:
+  - name: My Console
+    url: /admin/interactive
+  - name: My Memcache
+    url: /admin/memcache
 
 builtins:
 - datastore_admin: on
