--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,8 @@
-#Fri Nov 05 20:42:18 BRT 2010
+#Sat Nov 06 15:37:34 BRT 2010
 eclipse.preferences.version=1
+encoding//blog/__init__.py=utf-8
 encoding//blog/model.py=utf-8
 encoding//blog/routes.py=utf-8
+encoding//blog/settings.py=utf-8
 encoding//blog/util.py=utf-8
+encoding/tasks.py=utf-8
